[package]
name = "cli"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

[[bin]]
name = "dmm-tools"
path = "main.rs"

[dependencies]
structopt = "0.2.4"
structopt-derive = "0.2.4"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
rayon = "1.0.0"
dreammaker = { path = "../dreammaker" }
dmm-tools = { path = "../tools" }
flame = { version = "0.2.2", optional = true }

[features]
use_flame = ["dmm-tools/flame", "flame"]
xml = ["dreammaker/xml-rs"]